fixed spacing on login, restaurant details, search results, shopping cart and signup

--- a/common/src/css/style.less
+++ b/common/src/css/style.less
@@ -11,14 +11,14 @@ html, body, #root, #root > div {
         background-size: cover;
 };
 
-// #root {
-//     background-image: url('../DD-landing.jpg');
-//     height: 100%;
-//     width: 100%;
-//     background-position: center;
-//     background-repeat: no-repeat;
-//     background-size: cover;
-// };
+.long {
+    background-image: url('../DD-landing.jpg');
+    height: auto;
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+};
 
 .opacity {
     background-color: rgba(253, 251, 251, 0.7);
@@ -38,6 +38,21 @@ html, body, #root, #root > div {
     width: 60%;
 }
 
+// #centerStageLogin {
+//     position: absolute;
+//     top: 17%;
+//     height: 40%;
+//     left: 18%;
+//     width: 60%;
+// }
+
+// #centerStageSignup {
+//     position: absolute;
+//     top: 20%;
+//     height: 40%;
+//     left: 18%;
+//     width: 60%;
+// }
 // .uhoh:active {
 //     /* Start the shake animation and make the animation last for 0.5 seconds */
 //     animation: shake 0.5s; 
